--- a/app/views/clients/registrations/new.html.erb
+++ b/app/views/clients/registrations/new.html.erb
@@ -1,29 +1,56 @@
-<h2>Sign up</h2>
+<h2>新規登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :氏名 %>
+    <%= f.text_field :last_name, autofocus: true%>
+    <%= f.text_field :first_name, autofocus: true%>
+  </div>
+
+  <div class="field">
+     <%= f.label :カナ %>
+     <%= f.text_field :last_name_kana, autofocus: true%>
+     <%= f.text_field :first_name_kana, autofocus: true%>
+  </div>
+
+  <div class="field">
+    <%= f.label :メールアドレス %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :電話番号 %>
+    <%= f.text_field :telephone, autofocus: true%> - <%= f.text_field :telephone, autofocus: true%> - <%= f.text_field :telephone, autofocus: true%>
+  </div>
+
+  <div class="field">
+    <%= f.label :郵便番号 %>
+    <%= f.text_field :post_code, autofocus: true%> - <%= f.text_field :post_code, autofocus: true%>
+  </div>
+
+  <div class="field">
+    <%= f.label :住所 %>
+    <%= f.text_field :address, autofocus: true%>
+  </div>
+
+
+  <div class="field">
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> 文字以上のパスワード)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :確認用パスワード %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "登録" %>
   </div>
 <% end %>
 
-<%= render "clients/shared/links" %>
