--- a/app/views/admins/clients/index.html.erb
+++ b/app/views/admins/clients/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Admins::Clients#index</h1>
-<p>Find me in app/views/admins/clients/index.html.erb</p>
+<h1>顧客一覧</h1>
+
+<% @clients.each do |client| %>
+
+<%= client.id %> . <%= link_to (clinet.last_name+client.first_name), admins_client_path(client.id) %>
+
+<% end %>
