--- a/app/views/clients/registrations/new.html.erb
+++ b/app/views/clients/registrations/new.html.erb
@@ -22,12 +22,12 @@
 
   <div class="field">
     <%= f.label :電話番号 %>
-    <%= f.text_field :telephone, autofocus: true%> - <%= f.text_field :telephone, autofocus: true%> - <%= f.text_field :telephone, autofocus: true%>
+    <%= f.text_field :telephone, autofocus: true%>
   </div>
 
   <div class="field">
     <%= f.label :郵便番号 %>
-    <%= f.text_field :post_code, autofocus: true%> - <%= f.text_field :post_code, autofocus: true%>
+    <%= f.text_field :post_code, autofocus: true%>
   </div>
 
   <div class="field">
