--- a/app/views/clients/clients/show.html.erb
+++ b/app/views/clients/clients/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Clients::Clients#show</h1>
-<p>Find me in app/views/clients/clients/show.html.erb</p>
+<h1>My page</h1>
+<h3>氏名 <%= @client.last_name%> <%= @client.first_name%></h3>
+<h3>電話番号　<%= @client.telephone%></h3>
+<h3>自宅郵便番号　<%= @client.post_code%></h3>
+<h3>自宅住所　<%= @client.address%></h3>
+<h3>登録郵便番号1</h3>
+<h3>登録住所</h3>
+<h3>メールアドレス　<%= @client.email%></h3>
+
+<%= link_to"注文履歴一覧",clients_cds_path%>
+
+<%= link_to"Mypage編集",edit_clients_client_path(@client)%>
+<%= link_to"住所新規登録"%>
+
+<%= link_to"退会"%>
