add [add address]page & action

--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -5,8 +5,8 @@
 	<p>送付先住所</p>
 	<% form_for(@order) do |f| %>
 	<%= f.select :shipping_address, @client.address.map{|t| [t.sub_address, t.sub_address, :selected => @client.address]} %>
-	<%= @client.address.sub_post_code %>
-	<%= @client.address.last_name + @client.address.first_name %>
+	<%= @code %>
+	<%= @name %>
 </div>
 
 	<%= f.submit "注文を確定する" %>
