--- a/app/views/admins/cds/new.html.erb
+++ b/app/views/admins/cds/new.html.erb
@@ -1,2 +1,51 @@
-<h1>Admins::Cds#new</h1>
-<p>Find me in app/views/admins/cds/new.html.erb</p>
+<div class="header-bar">
+	    <li class="">
+            <%= link_to admins_cds_path  do %>
+            	<span aria-hidden="true">商品一覧</span>
+            <% end %>
+        </li>
+        <li class="">
+            <%= link_to admins_cds_path  do %>
+            	<span aria-hidden="true">商品追加</span>
+            <% end %>
+        </li>
+        <li class="">
+            <%= link_to admins_clients_path  do %>
+            	<span aria-hidden="true">顧客一覧</span>
+            <% end %>
+        </li>
+        <li class="">
+            <%= link_to admins_orders_path  do %>
+            	<span aria-hidden="true">顧客購入履歴</span>
+            <% end %>
+        </li>
+        <li class="">
+            <%= link_to admin_session_path  do %>
+            	<span aria-hidden="true">ログアウト</span>
+        <% end %>
+</div>
+
+<h2>CD新規登録</h2>
+<%= form_for @cd,:url => {:action => :create}  do |f| %>
+	<h4>CD名</h4>
+		<%= f.text_field :name, class:"cd-name" %>
+	<h4>アーティスト名</h4>
+		<%= f.text_field :artist, class:"cd-artist" %>
+	<h4>価格<br>税別価格</h4>
+		<%= f.text_field :price, class:"cd-price" %>
+	<h4>在庫数</h4>
+		<%= f.text_field :stock, class:"cd-stock" %>
+	<h4>ジャケットimage</h4>
+		<%= f.attachment_field :image %>
+	<h4>レーベル名</h4>
+		<%= f.collection_select :label_id, Label.all, :id, :label_name %>
+		<%= f.text_field :label_id, class:"label_name" %>
+	<h4>ジャンル</h4>
+		<%= f.collection_select :genre_id, Genre.all, :id, :genre_name %>
+		<%= f.text_field :genre_id, class:"genre_name" %>
+	<h4>ステータス</h4>
+		<%= f.select :sale_status, Cd.sale_statuses.keys.to_a, {} %>
+	<h4>説明文</h4>
+		<%= f.text_area :description, class:"cd-description",  size: "80*80" %>
+	<%= f.submit "新規登録", class:"btn btn-primary btn-block" %>
+<% end %>
