[add]edit,update

--- a/app/views/clients/registrations/new.html.erb
+++ b/app/views/clients/registrations/new.html.erb
@@ -21,17 +21,17 @@
   </div>
 
   <div class="field">
-    <%= f.label :電話番号 %>
+    <%= f.label :電話番号 %>(ハイフンありで入力してください)
     <%= f.text_field :telephone, autofocus: true%>
   </div>
 
   <div class="field">
-    <%= f.label :郵便番号 %>
+    <%= f.label :郵便番号 %>(ハイフンありで入力してください)
     <%= f.text_field :post_code, autofocus: true%>
   </div>
 
   <div class="field">
-    <%= f.label :住所 %>
+    <%= f.label :住所 %>(例：東京都渋谷区神南町0-0-0-101号)
     <%= f.text_field :address, autofocus: true%>
   </div>
 
