--- a/app/views/clients/clients/show.html.erb
+++ b/app/views/clients/clients/show.html.erb
@@ -1,5 +1,5 @@
 <h1>My page</h1>
-<h3>氏名 <%= @client.last_name%> <%= @client.first_name%></h3>
+<h3>氏名 <%= @client.last_name + @client.first_name%></h3>
 <h3>電話番号　<%= @client.telephone%></h3>
 <h3>自宅郵便番号　<%= @client.post_code%></h3>
 <h3>自宅住所　<%= @client.address%></h3>
