--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -2,13 +2,39 @@
 
 <div>
 	<h2>お届け先住所</h2>
+<!-- <input type="radio" name="test" value="<%= @client.id %>">  -->
+<%= form_for Order.new, url: clients_order_purchase_path do |f| %>
 
-		<label>
-			<%= radio_button_tag (:@client.last_name + @client.first_name, @client.post_code, @client.address, "@client.id" ) {:checked => true} %>
-		</label>
-		<% @client.address.each do |t| %>
-			<label>
-				<%= radio_button_tag (:t.last_name + t.first_name, t.sub_post_name, t.sub_address, "t.id") %>
-			</label>
+		<%= f.radio_button :client_id,@client.id, id: "one" %>
+			<% zyusyo1 = @client.last_name + @client.first_name + @client.post_code + @client.address %>
+
+				<label for="">
+					<%= zyusyo1 %>
+				</label>
+		<% @client.addresses.each do |t| %>
+
+				<%= f.radio_button :shipping_address, t.id, class: "two" %>
+				<% zyusyo = t.last_name + t.first_name + t.sub_post_code + t.sub_address %>
+				<label for="">
+					<%= zyusyo %>
+				</label>
+		<% end %>
+		<%= f.submit %>
 		<% end %>
 </div>
+
+
+
+<script>
+	let radio1 = document.getElementById("one");
+      let radio2 = document.querySelector(".two");
+      radio1.addEventListener("click", () => {
+        if (radio2.checked === true) {
+          radio2.checked = false;
+        }
+      });
+      radio2.addEventListener("click", () => {
+        if (radio1.checked === true) {
+          radio1.checked = false;
+        }
+      });</script>
