--- a/app/views/clients/clients/edit.html.erb
+++ b/app/views/clients/clients/edit.html.erb
@@ -9,9 +9,9 @@
 <%= f.email_field :email %></h3>
 <h3>電話番号
 <%= f.text_field :telephone %></h3>
-<h3>郵便番号
+<h3>自宅郵便番号
 <%= f.text_field :post_code %></h3>
-<h3>住所
+<h3>自宅住所
 <%= f.text_field :address %></h3>
 <h3><%= f.submit 'Update Mypage' %></h3>
 <% end %>
