[create]show,edit

--- a/app/views/admins/clients/edit.html.erb
+++ b/app/views/admins/clients/edit.html.erb
@@ -1,2 +1,18 @@
-<h1>Admins::Clients#edit</h1>
-<p>Find me in app/views/admins/clients/edit.html.erb</p>
+<h1>顧客編集</h1>
+
+<%= form_for @client, :url => {:controller => :clients, :action => :update } do |f| %>
+<h3>氏名(漢字)
+<%= f.text_field :last_name %> <%= f.text_field :first_name %></h3>
+<h3>氏名(カナ)
+<%= f.text_field :last_name_kana %><%= f.text_field :first_name_kana%></h3>
+<h3>メールアドレス
+<%= f.email_field :email %></h3>
+<h3>電話番号
+<%= f.text_field :telephone %></h3>
+<h3>自宅郵便番号
+<%= f.text_field :post_code %></h3>
+<h3>自宅住所
+<%= f.text_field :address %></h3>
+<h3><%= f.submit 'Update' %></h3>
+<% end %>
+
