--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -3,23 +3,26 @@
 <div>
 	<h2>お届け先住所</h2>
 
+	<!--clientの自宅住所選択用のラジオボタンを設置-->
 	<%= form_for Order.new, url: clients_order_purchase_path do |f| %>
 	<label>
 		<%= f.radio_button :client_id,@client.id, id: "one" %>
 			<% zyusyo1 = @client.last_name + @client.first_name + @client.post_code + @client.address %>
-					<%= zyusyo1 %>
+				<%= zyusyo1 %>
 	</label>
+
+		<!--addressesテーブルのレコードの数だけそれぞれのラジオボタンを設置-->
 		<% @client.addresses.each do |t| %>
 			<div>
 				<label>
 				<%= f.radio_button :shipping_address, t.id, class: "two" %>
 				<% zyusyo = t.last_name + t.first_name + t.sub_post_code + t.sub_address %>
 					<%= zyusyo %>
-
 				</label>
 			</div>
 		<% end %>
 
+		<!--支払い方法選択用のラジオボタンを設置-->
 		<label>
 			<%= f.radio_button :payment, 0 %>クレジット
 		</label>
@@ -33,13 +36,13 @@
 
 <div>
 	<p>注文内容</p>
-	<p>商品の小計:<%= "￥" + @items.quantity * @items.cd.price %></p>
-	<p>配送料・手数料:￥500</p>
-	<p>注文合計:<%= "￥" + @items.quantity * @items.cd.price + 500 %></p>
-	<p>ご請求額:<%= "￥" + @items.quantity * @items.cd.price + 500 %></p>
+	<p>商品の小計:<%= "￥" + @total_price.to_s %></p>
+	<p>配送料・手数料:<span>￥500</span></p>
+	<p>注文合計:<%= "￥" + (@total_price + 500).to_s %></p>
+	<p>ご請求額:<%= "￥" + (@total_price + 500).to_s %></p>
 </div>
-		<%= f.submit %>
-		<% end %>
+	<%= f.submit "注文を確定する" %>
+	<% end %>
 
 
 
