--- a/app/views/admins/clients/show.html.erb
+++ b/app/views/admins/clients/show.html.erb
@@ -3,7 +3,16 @@
 <h3>電話番号　<%= @client.telephone%></h3>
 <h3>自宅郵便番号　<%= @client.post_code%></h3>
 <h3>自宅住所　<%= @client.address%></h3>
+
+
+<%= @addresses.each do |address| %>
+<%= address.last_name + address.first_name %>
+<%= address.sub_post_code %>
+<%= address.sub_address %>
+<%= link_to "削除" %>
+<% end %>
+<% end %>
 <h3>メールアドレス　<%= @client.email%></h3>
 
-<%= link_to"顧客編集",edit_admins_client_path(@client)%>
+<%= link_to"顧客編集",edit_admins_client_path(@client.id)%>
 <%= link_to"退会"%>
