--- a/app/views/clients/clients/new.html.erb
+++ b/app/views/clients/clients/new.html.erb
@@ -1,12 +1,12 @@
 <h1>住所新規登録</h1>
 
-<% form_for(@address) do |f| %>
+<%= form_for @address, :url => {:controller => :clients, :action => :create} do |f| %>
 <h2>氏名</h2>
-<%= f.text_area :last_name %><%= f.text_area :first_name %>
+<%= f.text_field :last_name %><%= f.text_field :first_name %>
 <h2>郵便番号</h2>
-<%= f.text_area :sub_post_code %>
+<%= f.text_field :sub_post_code %>
 <h2>住所</h2>
-<%= f.text_field :sub_address %>
+<%= f.text_area :sub_address %>
 
 <%= f.submit "追加" %>
 
