--- a/app/views/clients/clients/show.html.erb
+++ b/app/views/clients/clients/show.html.erb
@@ -13,6 +13,6 @@
 <%= link_to"注文履歴一覧",clients_cds_path%>
 
 <%= link_to"Mypage編集",edit_clients_client_path(@client)%>
-<%= link_to"住所新規登録"%>
+<%= link_to"住所新規登録",new_clients_client_path(id: @client.id)%>
 
 <%= link_to"退会"%>
