--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -22,6 +22,8 @@
 			</div>
 		<% end %>
 
+		<%= link_to "新規住所追加登録はこちら", new_clients_client_path %>
+
 		<!--支払い方法選択用のラジオボタンを設置-->
 		<label>
 			<%= f.radio_button :payment, 0 %>クレジット
