--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -25,6 +25,7 @@
 		<%= link_to "新規住所追加登録はこちら", new_clients_client_path %>
 
 		<!--支払い方法選択用のラジオボタンを設置-->
+		<h2>お支払い方法</h2>
 		<label>
 			<%= f.radio_button :payment, 0 %>クレジット
 		</label>
