--- a/app/views/clients/orders/index.html.erb
+++ b/app/views/clients/orders/index.html.erb
@@ -1,27 +1,16 @@
 <h1>注文履歴一覧</h1>
 
-<table border="1">
-	<tr>
-		<th>購入日</th>
-		<th>購入品</th>
-		<th>購入枚数</th>
-		<th>CD価格</th>
-		<th>送料</th>
-		<th>支払方法</th>
-	</tr>
-
-	<% @orders.each do |order| %>
-	<% order.order_items.each_with_index do |item, i| %>
-
-	<tr align="center">
-		<td rowspan="i"><%= order.created_at.strftime("%Y-%m-%d") %></td>
-		<td><%= item.cd.name %></td>
-		<td><%= item.quantity %></td>
-		<td><%= item.purchased_price %></td>
-		<td rowspan="i">￥500</td>
-		<td rowspan="i"><%= order.payment %></td>
-	</tr>
-
-	<% end %>
-	<% end %>
-</table>
+<% @orders.each do |order| %>
+<div>
+<%= order.created_at.strftime("%Y-%m-%d") %>
+<%= order.payment %>
+<%= order.shipment_status %>
+</div>
+<div>
+<%= order.order_items.each do |item| %>
+<%= item.cd.name %>
+<%= item.quantity %>
+<%= item.purchased_price %>
+<% end %>
+</div>
+<% end %>
