--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -20,9 +20,9 @@
 			<%= link_to order.client.last_name + order.client.first_name, admins_client_path(order.client.id) %>
 		</th>
 		<th><%= order.created_at %></th>
-		<th><%= order.order_item.cd.name %></th>
-		<th><%= order.order_item.quantity %></th>
-		<th><%= order.order_item.cd.price * order.order_item.quantity %></th>
+		<th><%= order.order_items.cd.name %></th>
+		<th><%= order.order_items.quantity %></th>
+		<th><%= order.order_items.cd.price * order.order_items.quantity %></th>
 		<th><%= order.total_price %></th>
 		<th><%= order.shipping_address %></th>
 		<th><%= order.select :shipment_status, Order.shipment_statuses.keys.to_a, {} %></th>
