--- a/app/views/clients/orders/index.html.erb
+++ b/app/views/clients/orders/index.html.erb
@@ -1,16 +1,36 @@
 <h1>注文履歴一覧</h1>
 
 <% @orders.each do |order| %>
-<div>
-<%= order.created_at.strftime("%Y-%m-%d") %>
-<%= order.payment %>
-<%= order.shipment_status %>
-</div>
-<div>
-<%= order.order_items.each do |item| %>
-<%= item.cd.name %>
-<%= item.quantity %>
-<%= item.purchased_price %>
+<table border = "1">
+	<tr>
+		<th>購入日</th>
+		<th>支払方法</th>
+		<th>送料</th>
+		<th>ステータス</th>
+	</tr>
+	<tr align = "center">
+		<td><%= order.created_at.strftime("%Y-%m-%d") %></td>
+		<td><%= order.payment %></td>
+		<td>￥500</td>
+		<td><%= order.shipment_status %></td>
+	</tr>
+</table>
+<table border = "1">
+	<tr>
+		<th>購入品</th>
+		<th>購入枚数</th>
+		<th>CD価格</th>
+	</tr>
+
+	<% order.order_items.each do |item| %>
+	<tr align = "center">
+		<td><%= link_to item.cd.name, clients_order_show_path(item.id) %></td>
+		<td><%= item.quantity %></td>
+		<td><%= item.purchased_price %></td>
+	</tr>
+	<% end %>
+
+</table>
 <% end %>
-</div>
-<% end %>
+
+<h2>総計金額      ￥<%= @total_price %></h2>
