--- a/app/views/clients/registrations/new.html.erb
+++ b/app/views/clients/registrations/new.html.erb
@@ -21,12 +21,12 @@
   </div>
 
   <div class="field">
-    <%= f.label :電話番号 %>(ハイフンありで入力してください)
+    <%= f.label :電話番号 %>(半角英数字　ハイフンあり)
     <%= f.text_field :telephone, autofocus: true%>
   </div>
 
   <div class="field">
-    <%= f.label :郵便番号 %>(ハイフンありで入力してください)
+    <%= f.label :郵便番号 %>(半角英数字　ハイフンあり)
     <%= f.text_field :post_code, autofocus: true%>
   </div>
 
