--- a/app/views/admins/clients/show.html.erb
+++ b/app/views/admins/clients/show.html.erb
@@ -3,15 +3,29 @@
 <h3>電話番号　<%= @client.telephone%></h3>
 <h3>自宅郵便番号　<%= @client.post_code%></h3>
 <h3>自宅住所　<%= @client.address%></h3>
-
-
-<%= @addresses.each do |address| %>
-<%= address.last_name + address.first_name %>
-<%= address.sub_post_code %>
-<%= address.sub_address %>
-<%= link_to "削除" %>
-<% end %>
-<% end %>
+<h3>登録住所</h3>
+<div class="create-address">
+	<h4><!-- 文字の大きさのため、あとでcssで調整 -->
+		<table>
+			<thead>
+				<tr>
+					<th>氏名</th>
+				    <th>郵便番号</th>
+				    <th>住所</th>
+			    </tr>
+		    </thead>
+		    <% @address.each do |address| %>
+		    <tbody>
+		    	<tr>
+		    		<td><%= address.last_name %> <%= address.first_name %></td>
+				    <td><%= address.sub_post_code %></td>
+				    <td><%= address.sub_address %></td>
+			    </tr>
+		    </tbody>
+		    <% end %>
+	    </table>
+    </h4>
+</div>
 <h3>メールアドレス　<%= @client.email%></h3>
 
 <%= link_to"顧客編集",edit_admins_client_path(@client.id)%>
