--- a/app/views/clients/clients/new.html.erb
+++ b/app/views/clients/clients/new.html.erb
@@ -1,11 +1,11 @@
 <h1>住所新規登録</h1>
 
-<%= form_for @address, :url => {:action => :create} do |f| %>
-<h2>氏名</h2>
+<%= form_for @address, :url => {:controller => :clients, :action => :create} do |f| %>
+<h3>氏名</h3>
 <%= f.text_area :last_name %><%= f.text_area :first_name %>
-<h2>郵便番号</h2>
+<h3>郵便番号(半角英数字 ハイフンあり)</h3>
 <%= f.text_area :sub_post_code %>
-<h2>住所</h2>
+<h3>住所</h3>
 <%= f.text_field :sub_address %>
 
 <%= f.submit "追加" %>
