--- a/app/views/clients/orders/index.html.erb
+++ b/app/views/clients/orders/index.html.erb
@@ -1,36 +1,43 @@
 <h1>注文履歴一覧</h1>
 
-<% @orders.each do |order| %>
 <table border = "1">
+
 	<tr>
 		<th>購入日</th>
-		<th>支払方法</th>
-		<th>送料</th>
-		<th>ステータス</th>
-	</tr>
-	<tr align = "center">
-		<td><%= order.created_at.strftime("%Y-%m-%d") %></td>
-		<td><%= order.payment %></td>
-		<td>￥500</td>
-		<td><%= order.shipment_status %></td>
-	</tr>
-</table>
-<table border = "1">
-	<tr>
-		<th>購入品</th>
+		<th>CD名</th>
 		<th>購入枚数</th>
 		<th>CD価格</th>
+		<th>送料</th>
+		<th>支払方法</th>
+		<th>ステータス</th>
 	</tr>
 
-	<% order.order_items.each do |item| %>
+	<% @orders.each do |order| %>
+
 	<tr align = "center">
-		<td><%= link_to item.cd.name, clients_order_show_path(item.id) %></td>
-		<td><%= item.quantity %></td>
-		<td><%= item.purchased_price %></td>
+		<td><%= order.created_at.strftime("%Y-%m-%d") %></td>
+		<td>
+			<% order.order_items.each do |item| %>
+				<div><%= link_to item.cd.name, clients_order_show_path %></div>
+			<% end %>
+		</td>
+		<td>
+			<% order.order_items.each do |item| %>
+				<div><%= link_to item.quantity, clients_order_show_path %></div>
+			<% end %>
+		</td>
+		<td>
+			<% order.order_items.each do |item| %>
+				<div><%= link_to "￥"+ item.cd.price.to_s, clients_order_show_path %></div>
+			<% end %>
+		</td>
+		<td>￥500</td>
+		<td><%= order.payment %></td>
+		<td><%= order.shipment_status %></td>
 	</tr>
+
 	<% end %>
 
-</table>
-<% end %>
+
 
 <h2>総計金額      ￥<%= @total_price %></h2>
