--- a/app/views/clients/orders/show.html.erb
+++ b/app/views/clients/orders/show.html.erb
@@ -1,5 +1,5 @@
 <h1>注文履歴詳細</h1>
-<%= attachment_image_tag @item.cd, :image %>
+<%= attachment_image_tag @item.cd, :image, fallback:"no_image.png", size:"300x300" %>
 <table>
 	<tr>
 		<th>購入日</th>
