--- a/app/views/clients/orders/show.html.erb
+++ b/app/views/clients/orders/show.html.erb
@@ -1,6 +1,6 @@
 <h1>注文履歴詳細</h1>
 <%= attachment_image_tag @item.cd, :image, fallback:"no_image.png", size:"300x300" %>
-<table>
+<table border = "1">
 	<tr>
 		<th>購入日</th>
 		<th>CD名</th>
