--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -1,7 +1,9 @@
 <div>
 	<h2>ジャンル</h2>
 	<% @cds.each do |cd| %>
+		<%= link_to clients_cd_path(cd.id) do %>
 	    <%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'40x40' %>
+	    <% end %>
 		<%= cd.artist.artist_name %>
 	    <%= cd.name %>
 	    <%= cd.price %>
