--- a/app/views/clients/clients/new.html.erb
+++ b/app/views/clients/clients/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_for @address, :url => {:controller => :clients, :action => :create} do |f| %>
 <h2>氏名</h2>
 <%= f.text_field :last_name %><%= f.text_field :first_name %>
-<h2>郵便番号</h2>
+<h2>郵便番号(半角英数字 ハイフンあり)</h2>
 <%= f.text_field :sub_post_code %>
 <h2>住所</h2>
 <%= f.text_area :sub_address %>
