--- a/app/views/admins/clients/show.html.erb
+++ b/app/views/admins/clients/show.html.erb
@@ -29,7 +29,7 @@
 <h3>メールアドレス　<%= @client.email%></h3>
 
 <%= link_to"顧客編集",edit_admins_client_path(@client.id)%>
-<%= link_to"退会"%>
+<%= link_to"退会",admins_client_path(@client.id),method: :delete, "data-confirm" => "退会しますか？"%>
 
 <table border = "1">
 
