--- a/app/views/admins/orders/index.html.erb
+++ b/app/views/admins/orders/index.html.erb
@@ -2,15 +2,15 @@
 
 <table border = "1">
 
-	<tr>
-		<th>購入者</th>
-		<th>購入日</th>
-		<th>CD名</th>
-		<th>購入枚数</th>
-		<th>小計</th>
-		<th>購入価格総計</th>
-		<th>送付先</th>
-		<th>ステータス</th>
+	<tr align = "center">
+		<td>購入者</td>
+		<td>購入日</td>
+		<td>CD名</td>
+		<td>購入枚数</td>
+		<td>小計</td>
+		<td>購入価格総計</td>
+		<td>送付先</td>
+		<td>ステータス</td>
 	</tr>
 
 	<% @orders.each do |order| %>
