--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -6,7 +6,7 @@
 	<!--clientの自宅住所選択用のラジオボタンを設置-->
 	<%= form_for Order.new, url: clients_order_purchase_path do |f| %>
 	<label>
-		<%= f.radio_button :client_id,@client.id, id: "one" %>
+		<%= f.radio_button :client_id,@client.id, id: "one", checked: "checked" %>
 			<% zyusyo1 = @client.last_name + @client.first_name + @client.post_code + @client.address %>
 				<%= zyusyo1 %>
 	</label>
