--- a/app/views/admins/cds/index.html.erb
+++ b/app/views/admins/cds/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Admins::Cds#index</h1>
-<p>Find me in app/views/admins/cds/index.html.erb</p>
+<div>
+	<h2>ジャンル</h2>
+	<% @cds.each do |cd| %>
+		<%= link_to admins_cd_path(cd.id) do %>
+	    <%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'40x40' %>
+	    <% end %>
+		<%= cd.artist.artist_name %>
+	    <%= cd.name %>
+	    <%= cd.price %>
+    <% end %>
+</div>
