--- a/app/views/clients/cds/show.html.erb
+++ b/app/views/clients/cds/show.html.erb
@@ -1,6 +1,6 @@
 <h1>商品詳細</h1>
 
-<p>画像：<%= attachment_image_tag @cd, :image %></p>
+<p>画像：</p><%= attachment_image_tag @cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'40x40' %>
 <p>説明文：<%= @cd.description %></p>
 
 <p>アーティスト名：<%= @cd.artist.artist_name %></p>
