--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
       <nav>ながれこ</nav>
         <ul>
           <% if admin_signed_in? %>
+            <p>管理者でログイン中</p>
             <li>
               <%= link_to "商品一覧", admins_cds_path %>
             </li>
