--- a/app/views/clients/clients/edit.html.erb
+++ b/app/views/clients/clients/edit.html.erb
@@ -13,6 +13,11 @@
 <%= f.text_field :post_code %></h3>
 <h3>自宅住所
 <%= f.text_field :address %></h3>
+<h3>パスワード変更</h3>
+<%= f.password_field :password %>
+<h3>変更パスワード再入力</h3>
+<%= f.password_field :password_confirmation%>
+
 <h3><%= f.submit 'Update Mypage' %></h3>
 <% end %>
 
