--- a/app/views/admins/clients/edit.html.erb
+++ b/app/views/admins/clients/edit.html.erb
@@ -13,6 +13,5 @@
 <%= f.text_field :post_code %></h3>
 <h3>自宅住所
 <%= f.text_field :address %></h3>
-<h3><%= f.submit 'Update' %></h3>
+<h3><%= f.submit '編集' %></h3>
 <% end %>
-
