--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,15 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require bxslider
  *= require_self
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.object{
+	text-align:center;
+}
+.image{
+	margin:0 auto;
+}
