--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -1,11 +1,14 @@
-<div>
+<!--<div class="container">-->
 	<h2>ジャンル</h2>
-	<% @cds.each do |cd| %>
-		<div><%= link_to clients_cd_path(cd.id) do %>
-	    <%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'40x40' %>
-	    <% end %></div>
-		<div><%= cd.artist.artist_name %></div>
-	    <div><%= cd.name %></div>
-	    <div><%= cd.price %></div>
-    <% end %>
-</div>
+	<ul class="bxslider">
+		<% @cds.each do |cd| %>
+			<li class="object">
+				<%= link_to clients_cd_path(cd.id) do %>
+				    <div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg' ,fallback: "noimage.jpg" ,:size =>'60x60' %></div>
+					<div><%= cd.artist.artist_name %></div>
+				    <div><%= cd.name %></div>
+				<% end %>
+			</li>
+	    <% end %>
+    </ul>
+<!--</div>
