--- a/app/views/clients/orders/buy.html.erb
+++ b/app/views/clients/orders/buy.html.erb
@@ -27,7 +27,7 @@
 		<!--支払い方法選択用のラジオボタンを設置-->
 		<h2>お支払い方法</h2>
 		<label>
-			<%= f.radio_button :payment, 0 %>クレジット
+			<%= f.radio_button :payment, 0, checked: "checked" %>クレジット
 		</label>
 		<label>
 			<%= f.radio_button :payment, 1 %>銀行振込
