--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,20 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+/* -----------admin-new-cd---------------- */
+.disc-number{
+	width: 60px;
+}
+
+.disc-table1{
+	width: 60px;
+	text-align: center;
+}
+
+.disc-table2{
+	width: 400px;
+	margin-right: 30px;
+	text-align: center;
+}
+/* -----------admin-new-cd end------------ */
