--- a/app/views/admins/cds/_disc_fields.html.erb
+++ b/app/views/admins/cds/_disc_fields.html.erb
@@ -1,13 +1,13 @@
 <div class="nested-fields">
-  <h4>disc_num</h4>
-    <%= f.text_field :disc_number %>
+  <h4>No.disc</h4>
+    <%= f.text_field :disc_number, class:"disc-number" %>
     <%= link_to_remove_association "DISC削除", f %>
   <table>
       <thead>
         <tr>
-          <th>曲順</th>
-          <th>曲名</th>
-          <th>delete</th>
+          <th class="disc-table1">曲順</th>
+          <th class="disc-table2">曲名</th>
+          <th class="disc-delete"></th>
         </tr>
       </thead>
       <tbody>
