--- a/app/views/admins/cds/_song_fields.html.erb
+++ b/app/views/admins/cds/_song_fields.html.erb
@@ -1,5 +1,5 @@
-	<tr class="my-wrapper-class">
-		<td><%= f.text_field :song_number %></td>
-		<td><%= f.text_field :song_name %></td>
+	<tr class="nested-fields my-wrapper-class">
+		<td><%= f.text_field :song_number, class:"disc-table1" %></td>
+		<td><%= f.text_field :song_name,class:"disc-table2" %></td>
 		<td><%= link_to_remove_association('曲削除', f, { wrapper_class: 'my-wrapper-class' })%></td>
 	</tr>
