--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,3 +31,17 @@
 	margin-right: 30px;
 	text-align: center;
 }
+
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+h1,h2,h3,h4{
+	margin: 0;
+}
+
+.navbar{
+	margin-bottom: 0;
+}
