--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the clients/cds controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main-visual{
+	height: 500px;
+	background-image: image_url("yun_1079.jpg");
+	background-position: 25% 75%;
+	background-size: cover;
+	color: #fff;
+	text-align: center;
+}
+
+.genre{
+	margin: 20px;
+}
