--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -1,12 +1,19 @@
-<h2>ジャンル</h2>
-<ul class="bxslider">
-	<% @cds.each do |cd| %>
+<section class="main-visual">
+	<div class="main-text">
+		<h1>ながれこ</h1>
+		<p>長野県出身のアーティストを集めたECサイト</p>
+	</div>
+</section>
+
+<h2 class="genre">ジャンル</h2>
+	<ul class="bxslider">
+		<% @cds.each do |cd| %>
 		<li class="object">
 			<%= link_to clients_cd_path(cd.id) do %>
-		    	<div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg', fallback: "noimage.jpg" ,:size =>'60x60' %></div>
-				<div><%= cd.artist.artist_name %></div>
-			    <div><%= cd.name %></div>
+			<div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg', fallback: "noimage.jpg" ,:size =>'60x60' %></div>
+			<div><%= cd.artist.artist_name %></div>
+			<div><%= cd.name %></div>
 			<% end %>
 		</li>
-    <% end %>
-</ul>
+        <% end %>
+    </ul>
