--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,6 +84,7 @@
         <% if flash[:notice] %>
           <div class="flash"><%= flash[:notice] %></div>
         <% end %>
+        </div>
 
     <%= yield %>
 
