--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -1,3 +1,5 @@
+
+
 <h2>ジャンル</h2>
 <ul class="bxslider">
 	<% @cds.each do |cd| %>
@@ -10,3 +12,24 @@
 		</li>
     <% end %>
 </ul>
+
+<% @genres.each do |genre| %>
+	<h2><%= genre.genre_name %></h2>
+	<ul class="bxslider">
+		<% genre.cds.each do |cd| %>
+			<li class="object">
+				<%= link_to clients_cd_path(cd.id) do %>
+					<div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg', fallback: "noimage.jpg" ,:size =>'60x60' %></div>
+					<div><%= cd.artist.artist_name %></div>
+			    	<div><%= cd.name %></div>
+				<% end %>
+			</li>
+    	<% end %>
+	</ul>
+<% end %>
+
+<span id="back">
+	<a href="#">
+		<%= image_tag "arrow.png"  %>
+	</a>
+</span>
