--- a/app/views/clients/items/index.html.erb
+++ b/app/views/clients/items/index.html.erb
@@ -5,7 +5,7 @@
 		<% total_price = 0 %>
 		<!-- sumに初期値の設定 -->
 		<% @items.each do |item| %>
-		<td rowspan="2"><%= attachment_image_tag item.cd, :image %></td>
+		<td rowspan="2"><%= attachment_image_tag item.cd, :image, :fill, 80, 80, format: "png", fallback: "no_image.png", :size =>"80x80" %></td>
 		<td><%= link_to item.cd.name, clients_cd_path(item.cd.id) %></td>
 		<td><%= form_for item, url: clients_item_path(item.id) do |f| %>
 			<%= f.number_field :quantity, value: item.quantity %>
