admins rework login

--- a/app/views/admins/cds/_newform.html.erb
+++ b/app/views/admins/cds/_newform.html.erb
@@ -9,11 +9,11 @@
 	</div>
 	<div>
 		<h4>価格(税別価格)</span></h4>
-		<%= f.text_field :price, class:"cd-price" %>
+		<%= f.number_field :price, class:"cd-price" %>
 	</div>
 	<div>
 		<h4>在庫数</h4>
-		<%= f.text_field :stock, class:"cd-stock" %>
+		<%= f.number_field :stock, class:"cd-stock" %>
 	</div>
 	<div>
 		<h4>ジャケットimage</h4>
