--- a/app/views/admins/cds/_editform.html.erb
+++ b/app/views/admins/cds/_editform.html.erb
@@ -6,11 +6,11 @@
 	    </div>
 	    <div>
 	    	<h3>価格</h3>
-	    	<%= f.text_field :price %>
+	    	<%= f.number_field :price %>
 		</div>
 		<div>
 			<h3>在庫</h3>
-	    	<%= f.text_field :stock %>
+	    	<%= f.number_field :stock %>
 		</div>
 		<div>
 			<h3>ジャケット画像</h3>
