--- a/app/views/admins/cds/new.html.erb
+++ b/app/views/admins/cds/new.html.erb
@@ -1,2 +1,3 @@
 <h2>CD新規登録</h2>
-<%= render 'form', new_cd: @cd  %>
+<h5><strong>※数字は半角英数字で記入して下さい</strong></h5>
+<%= render 'newform', new_cd: @cd  %>
