--- a/app/assets/stylesheets/admins/clients.scss
+++ b/app/assets/stylesheets/admins/clients.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the admins/clients controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#back{
+	position:fixed;
+	right:20px;
+	bottom:20px;
+}
+#back img{
+	width:50px;
+}
