--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,8 @@
     <header class="navbar navbar-default">
       <div class="container">
         <nav class="nav navbar-nav navbar-left">
-          <div class="logo_name">ながれこ</div>
-          <% if client_signed_in? %>
-            <div class="login_status"><%= current_client.last_name + current_client.first_name %>でログイン中</div>
-          <% elsif admin_signed_in? %>
-            <div class="login_status">管理者でログイン中</div>
-          <% end %>
+          <div class="logo_name"><%= image_tag "sample_logo.png" %></div>
+
         </nav>
         <ul class="nav navbar-nav navbar-right">
           <% if admin_signed_in? %>
@@ -37,6 +33,7 @@
             <li>
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
             </li>
+            <div class="text-right">管理者でログイン中</div>
 
           <% elsif client_signed_in? %>
             <li>
@@ -57,6 +54,7 @@
             <li>
               <%= link_to "ログアウト", destroy_client_session_path, method: :delete %>
             </li>
+            <div class="text-right"><%= current_client.last_name + current_client.first_name %>でログイン中</div>
 
           <% else %>
             <li>
