--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -1,11 +1,11 @@
 <section class="main-visual">
 	<div class="main-text">
-		<h1>ながれこ</h1>
 		<p>長野県出身のアーティストを集めたECサイト</p>
 	</div>
 </section>
 
-<h2 class="genre">ジャンル</h2>
+<div class="genre">
+<h2 class="genre-name">ジャンル</h2>
 	<ul class="bxslider">
 		<% @cds.each do |cd| %>
 		<li class="object">
