--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -3,14 +3,18 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .main-visual{
-	height: 500px;
+	height: 400px;
 	background-image: image_url("yun_1079.jpg");
-	background-position: 25% 75%;
+	background-position: 20% 75%;
 	background-size: cover;
 	color: #fff;
-	text-align: center;
+	font-size: 10px;
 }
 
 .genre{
 	margin: 20px;
+}
+
+.genre-name{
+	color: grey;
 }
