--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header class="navbar navbar-default">
       <div class="container">
         <nav class="nav navbar-nav navbar-left">
-          <div class="logo_name">ながれこ</div>
+          <div class="logo_name"><%= image_tag "logo2_nagareco.png"%></div>
           <% if client_signed_in? %>
             <div class="login_status"><%= current_client.last_name + current_client.first_name %>でログイン中</div>
           <% elsif admin_signed_in? %>
@@ -79,19 +79,17 @@
         </ul>
       </div>
     </header>
-
-        <div class="container">
-        <% if flash[:notice] %>
-          <div class="flash"><%= flash[:notice] %></div>
-        <% end %>
-        </div>
-
+    <div class="container">
+      <% if flash[:notice] %>
+      <div class="flash"><%= flash[:notice] %></div>
+      <% end %>
+    </div>
     <%= yield %>
+    <footer class="footer">
+      <div class="container">
+        <p class="text-right">CopyRight ながれこ.inc</p>
+      </div>
+    </footer>
 
-        <footer class="footer">
-          <div class="container">
-            <p class="text-right">CopyRight ながれこ.inc</p>
-          </div>
-        </footer>
   </body>
 </html>
