--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -1,5 +1,8 @@
-
-
+<section class="main-visual">
+	<div class="main-text">
+		<p>長野県出身のアーティストを集めたECサイト</p>
+	</div>
+</section>
 
 <h2>ジャンル</h2>
 <ul class="bxslider">
