--- a/app/assets/stylesheets/clients/cds.scss
+++ b/app/assets/stylesheets/clients/cds.scss
@@ -10,3 +10,12 @@
 #back img{
 	width:50px;
 }
+
+.main-visual{
+	height: 400px;
+	background-image: image_url("yun_1079.jpg");
+	background-position: 20% 75%;
+	background-size: cover;
+	color: #fff;
+	font-size: 10px;
+}
