--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,3 +39,26 @@
 .image{
 	margin:0 auto;
 }
+
+.way{
+	opacity:0;
+	position:relative;
+	transition:all 1s 0s ease;
+	z-index:0;
+}
+.way:before{
+	background:#333;
+	content:"";
+	display: block;
+	position:absolute;
+	transform:translateX(-100%);
+	transition: all 1s 0s ease;
+	width:100%;
+	z-index:1;
+}
+.way.active:before{
+	transform:translateX(100%);
+}
+.way.active{
+	opacity:1;
+}
