--- a/app/views/clients/cds/index.html.erb
+++ b/app/views/clients/cds/index.html.erb
@@ -14,6 +14,7 @@
 </ul>
 
 <% @genres.each do |genre| %>
+	<div class="way">
 	<h2><%= genre.genre_name %></h2>
 	<ul class="bxslider">
 		<% genre.cds.each do |cd| %>
@@ -26,6 +27,7 @@
 			</li>
     	<% end %>
 	</ul>
+	</div>
 <% end %>
 
 <span id="back">
