--- a/app/views/admins/cds/index.html.erb
+++ b/app/views/admins/cds/index.html.erb
@@ -11,6 +11,23 @@
 	    <% end %>
     </ul>
 
+<% @genres.each do |genre| %>
+	<div class="way">
+	<h2><%= genre.genre_name %></h2>
+	<ul class="bxslider">
+		<% genre.cds.each do |cd| %>
+			<li class="object">
+				<%= link_to clients_cd_path(cd.id) do %>
+					<div class="image"><%= attachment_image_tag cd, :image, :fill, 40, 40, format: 'jpeg', fallback: "noimage.jpg" ,:size =>'60x60' %></div>
+					<div><%= cd.artist.artist_name %></div>
+			    	<div><%= cd.name %></div>
+				<% end %>
+			</li>
+    	<% end %>
+	</ul>
+	</div>
+<% end %>
+
 <span id="back">
 	<a href="#">
 		<%= image_tag "arrow.png"  %>
