--- a/app/views/admins/cds/_editform.html.erb
+++ b/app/views/admins/cds/_editform.html.erb
@@ -41,4 +41,4 @@
     </div>
 <%= f.submit "更新", class:"btn btn-primary " %>
 <% end %>
-<%= link_to "削除", admins_cd_path, method: :delete, "data-confirm" => "本当に消しますか?" ,class: "btn btn-danger" %>
+<%= link_to "削除", admins_cd_hide_path, method: :post, "data-confirm" => "本当に消しますか?" ,class: "btn btn-danger" %>
